# bilibili-video-summarizer-skill

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
bilibili_summarizer/: __init__.py  cli.py  config.py  llm.py
bilibili_summarizer/strategies/: __init__.py  base.py  deep.py  quick.py
bilibili_summarizer/subtitle/: __init__.py  fetcher.py  whisper_fallback.py
examples/: custom_strategy.py  example-deep.md  example-quick.md
scripts/: get_subtitle.py  get_subtitle_fallback.py
strategies/: customize.md  deep.md  quick.md
