[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bilibili-video-summarizer"
version = "0.1.0"
description = "Fetch subtitles from Bilibili videos and generate structured learning notes via LLM"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
whisper = ["faster-whisper>=1.0.0", "yt-dlp>=2023.0.0"]

[project.scripts]
bilibili-summarize = "bilibili_summarizer.cli:main"

[tool.setuptools.packages.find]
include = ["bilibili_summarizer*"]
